tests/baselines/reference/propertyAssignmentOnParenthesizedNumber(strict=true).errors.txt
bug38934.js(3,1): error TS7053: Element implicitly has an 'any' type because expression of type '0' can't be used to index type '{}'.
  Property '0' does not exist on type '{}'.


==== bug38934.js (1 errors) ====
    var x = {};
    // should not crash and also should not result in a property '0' on x.
    x[(0)] = 1;
    ~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '0' can't be used to index type '{}'.
!!! error TS7053:   Property '0' does not exist on type '{}'.
    